--- a/functions/package.json
+++ b/functions/package.json
@@ -14,6 +14,7 @@
   "main": "index.js",
   "dependencies": {
     "@google-cloud/storage": "^5.8.3",
+    "busboy": "^0.3.1",
     "firebase-admin": "^9.2.0",
     "firebase-functions": "^3.11.0"
   },
