--- a/functions/package.json
+++ b/functions/package.json
@@ -16,7 +16,8 @@
     "@google-cloud/storage": "^5.8.3",
     "busboy": "^0.3.1",
     "firebase-admin": "^9.2.0",
-    "firebase-functions": "^3.11.0"
+    "firebase-functions": "^3.11.0",
+    "node-mailjet": "^3.3.1"
   },
   "devDependencies": {
     "firebase-functions-test": "^0.2.0"
